--- a/src/routes-nav/Navbar.css
+++ b/src/routes-nav/Navbar.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     padding: 10px 20px;
-    background-color: #333; /* Darker shade for the navbar background */
+    background-color:  #008170;
     color: #fff; /* White for text color */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow */
     margin-bottom: 10px;
@@ -22,6 +22,7 @@
     display: flex;
     justify-content: flex-start;
     gap: 20px;
+    background-color: #008170;
   }
   
   #nav-list li {
@@ -66,6 +67,6 @@
   }
 
   #title {
-    color:aqua;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    text-align: center;
+    color: 
 }
