--- a/src/insects/InsectCard.css
+++ b/src/insects/InsectCard.css
@@ -2,33 +2,40 @@
 .card {
   border: 1px solid #ccc;
   border-radius: 10px;
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  box-shadow: 0 12px 24px rgba(0,91,65,0.5);
   margin: 15px;
-  display: inline-block;
-  width: calc((100% - 60px) / 4); /* Adjusts the width for 4 cards per row */
-  max-width: 250px; /* Ensures the maximum width of each card */
-  overflow: hidden; /* Prevents content from overflowing the card boundaries */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  background-color: #008170;
+}
+
+.card:hover{
+  box-shadow: 0 24px 48px rgba(0,91,65,0.9);
 }
 
 .card-body {
   padding: 20px;
+  color: #ffffff;
   text-align: center;
 }
 
 .card-title {
   margin-bottom: 10px;
-  font-size: 1.2em; /* Adjusts the size of the species name */
+  margin-top: 10px;
+  font-size: 1.5em;
+
 }
 
 .card-title img {
-  width: 80%; /* Makes the image take up most of the space, but not too much */
+  max-width: 100%; /* Ensure image doesn't exceed card width */
   height: auto;
-  float: right;
-  margin-left: 10px;
+  
 }
 
 h3 {
-  font-size: 1.75em; /* Makes the price larger and easier to read */
-  color: #333; /* Darkens the price text for better readability */
-  margin-top: 0; /* Removes top margin to keep everything tight */
+  font-size: 1.75em;
+  margin-top: 0;
 }
