--- a/src/checkout/CheckoutForm.css
+++ b/src/checkout/CheckoutForm.css
@@ -22,3 +22,7 @@
   .checkout-form input[type="submit"]:hover {
     background-color: #0056b3; /* Darker blue on hover */
   }
+
+p{
+  color: white;
+}
