--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 body {
-    background-color:#0F0F0F;
     font-family: "Rubik Bubbles", system-ui;
     font-weight: 400;
     font-style: normal;
+    color: white;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
 .animated-plus-button {
@@ -63,4 +64,38 @@ body {
 
 .animated-minus-button:active {
     transform: scale(0.9);
+}
+
+.container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+  
+  background-image: url("https://www.earth.com/assets/_next/image/?url=https%3A%2F%2Fcff2.earth.com%2Fuploads%2F2024%2F02%2F14101624%2Famazon_rainforest_approaching-widespread-collapse_1m-1400x850.jpg&w=1080&q=75");
+  background-size: cover;
+  background-position: center;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Adjust opacity as needed */
+  backdrop-filter: blur(8px); /* Optional: adds a subtle blur effect */
+}
+
+.background-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
