--- a/src/auth/auth.css
+++ b/src/auth/auth.css
@@ -2,3 +2,21 @@ h2 {
     color: white;
     text-align: center;
 }
+
+input{
+    border: solid rgb(0,0,0,0.5) 1px;
+}
+
+.form-group {
+    margin-bottom: 4%;
+}
+
+.card-body {
+    text-align: center;
+
+}
+
+.card {
+    width: 60%;
+    margin: auto auto;
+}
